[tool.poetry]
name = "slackdsascript"
version = "0.1.0"
description = ""
authors = ["Anshuman Singh <asingh99cool@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
slack-sdk = "^3.33.5"
schedule = "^1.2.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
